appId: com.fatihgulen.helalrehberi
---
- launchApp:
    clearState: false
- waitForAnimationToEnd:
    timeout: 5000
- takeScreenshot: 02_home

- tapOn:
    text: "Type Nutella, Haribo or barcode..."
- inputText: "Nutella"
- waitForAnimationToEnd:
    timeout: 4000
- takeScreenshot: 03_search_results

- hideKeyboard
- tapOn:
    text: "History"
- waitForAnimationToEnd:
    timeout: 3000
- takeScreenshot: 04_history

- tapOn:
    text: "E-Codes"
- waitForAnimationToEnd:
    timeout: 3000
- takeScreenshot: 05_ecodes

- tapOn:
    text: "Home"
- waitForAnimationToEnd:
    timeout: 3000
- takeScreenshot: 06_back_home
